--- a/frontend/src/styles/theme/navigation.scss
+++ b/frontend/src/styles/theme/navigation.scss
@@ -85,11 +85,12 @@
         svg {
           transition: all $transition;
           color: var(--grey-400);
+          width: 1.25rem;
         }
       }
 
       .collapse-project-button-placeholder {
-        width: calc(.75rem + 1.25em); 
+        width: 2rem;
         flex-shrink: 0;
       }
 
