refactor: move bulma button styles to button component

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -22,7 +22,7 @@
 
 // imports from "bulma-css-variables/sass/elements/_all";
 @import "bulma-css-variables/sass/elements/box";
-@import "bulma-css-variables/sass/elements/button";
+// @import "bulma-css-variables/sass/elements/button"; // Moved to Button.vue component
 @import "bulma-css-variables/sass/elements/container";
 @import "bulma-css-variables/sass/elements/content";
 @import "bulma-css-variables/sass/elements/icon";
